kustomization/overlays/prod/github-mcp/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: github-mcp-svc
spec:
  ports:
    - name: web
      port: 8082
      protocol: TCP
      targetPort: web
  selector:
    app.kubernetes.io/name: github-mcp
  type: ClusterIP
